@@ -22,6 +22,7 @@ class CircusParser(object):
                           ['data', 'stream_mode', 'string', 'None'],
                           ['data', 'overwrite', 'bool', 'True'],
                           ['data', 'parallel_hdf5', 'bool', 'True'],
+                          ['data', 'output_dir', 'string', ''],
                           ['detection', 'alignment', 'bool', 'True'],
                           ['detection', 'matched-filter', 'bool', 'False'],
                           ['detection', 'matched_thresh', 'float', '5'],
@@ -245,7 +246,16 @@ class CircusParser(object):
 
         self.parser.set('data', 'data_file', self.file_name)
         self.parser.set('data', 'data_file_no_overwrite', os.path.join(file_path, os.path.basename(f_next) + '_all_sc.dat'))
-        file_out = os.path.join(f_next, os.path.basename(f_next))
+
+        if self.parser.get('data', 'output_dir') != '':
+          path = os.path.abspath(os.path.expanduser(self.parser.get('data', 'output_dir')))
+          self.parser.set('data', 'output_dir', path)
+          file_out = os.path.join(path, os.path.basename(f_next))
+          if not os.path.exists(file_out):
+            os.makedirs(file_out)
+        else:
+          file_out = os.path.join(f_next, os.path.basename(f_next))
+
         self.parser.set('data', 'file_out', file_out) # Output file without suffix
         self.parser.set('data', 'file_out_suff', file_out  + self.parser.get('data', 'suffix')) # Output file with suffix
         self.parser.set('data', 'data_file_noext', f_next)   # Data file (assuming .filtered at the end)
