@@ -14,6 +14,7 @@ The data section is::
     suffix         =                       # Suffix to add to generated files
     global_tmp     = True                  # should be False if local /tmp/ has enough space (better for clusters)
     overwrite      = True                  # If you want to filter or remove artefacts on site. Data are duplicated otherwise
+    output_dir     =                       # By default, generated data are in the same folder as the data.
 
 .. warning::
 
@@ -25,6 +26,7 @@ Parameters that are most likely to be changed:
     * ``global_temp`` If you are using a cluster with NFS, this should be False (local /tmp/ will be used by every nodes)
     * ``stream_mode`` If streams in you data (could be multi-files, or even in the same file) should be processed together (see :doc:`Using multi files <../code/multifiles>`)
     * ``overwrite`` If True, data are overwritten during filtering, assuming the file format has write access. Otherwise, an external raw_binary file will be created during the filtering step, if any.
+    * ``ouput_dir`` If you want all the file generated by SpyKING CIRCUS to be in a particular directory, instead of next to the raw data
 
 Detection
 ---------
